@@ -120,7 +120,7 @@
 
 #define STR_REBAYER N_("Builds a Bayer masked color image from 4 separate images containing the data from Bayer subchannels CFA0, CFA1, CFA2 and CFA3. (The corresponding command to split the CFA pattern into subchannels is <b>split_cfa</b>.) This function can be used as part of a workflow applying some processing to the individual Bayer subchannels prior to demosaicing. The fifth parameter <b>bayerpattern</b> specifies the Bayer matrix pattern to recreate: <b>bayerpattern</b> should be one of 'RGGB', 'BGGR', 'GRBG' or 'GBRG'")
 #define STR_REGISTER N_("Finds and optionally performs geometric transforms on images of the sequence given in argument so that they may be superimposed on the reference image. Using stars for registration, this algorithm only works with deep sky images. Star detection options can be changed using <b>SETFINDSTAR</b> or the <i>Dynamic PSF</i> dialog.\n\nAll images of the sequence will be registered unless the option <b>-selected</b> is passed, in that case the excluded images will not be processed.\nThe <b>-2pass</b> option will only compute the transforms but not generate the transformed images, <b>-2pass</b> adds a preliminary pass to the algorithm to find a good reference image before computing the transforms, based on image quality and framing. To generate transformed images after this pass, use SEQAPPLYREG.\nIf created, the output sequence name will start with the prefix \"r_\" unless otherwise specified with <b>-prefix=</b> option. The output images can be rescaled by passing a <b>-scale=</b> argument with a float value between 0.1 and 3.\n\n<b>Image transformation options:</b>\n\nThe detection is done on the green layer for colour images, unless specified by the <b>-layer=</b> option with an argument ranging from 0 to 2 for red to blue.\n<b>-transf=</b> specifies the use of either <b>shift</b>, <b>similarity</b>, <b>affine</b> or <b>homography</b> (default) transformations respectively.\n<b>-minpairs=</b> will specify the minimum number of star pairs a frame must have with the reference frame, otherwise the frame will be dropped and excluded from the sequence.\n<b>-maxstars=</b> will specify the maximum number of stars to find within each frame (must be between 100 and 2000). With more stars, a more accurate registration can be computed, but will take more time to run.\n<b>-nostarlist</b> disables saving the star lists to disk.\n<b>-disto=</b> uses distortion terms from a previous platesolve solution (with a SIP order > 1). It takes as parameter either <b>image</b> to use the solution contained in the currently loaded image, <b>file</b> followed by the path to the image containing the solution or <b>master</b> to load automatically the matching distortion master corresponding to each image. When using this option, the polynomials are used both to correct star positions before computing the transformation and to undistort the images when output images are exported.\n\n<b>Image interpolation options:</b>\n\nBy default, transformations are applied to register the images by using interpolation.\nThe pixel interpolation method can be specified with the <b>-interp=</b> argument followed by one of the methods in the list <b>no</b>[ne], <b>ne</b>[arest], <b>cu</b>[bic], <b>la</b>[nczos4], <b>li</b>[near], <b>ar</b>[ea]}. If <b>none</b> is passed, the transformation is forced to shift and a pixel-wise shift is applied to each image without any interpolation.\nClamping of the bicubic and lanczos4 interpolation methods is the default, to avoid artefacts, but can be disabled with the <b>-noclamp</b> argument.\n\n<b>Image drizzle options:</b>\n\nOtherwise, the images can be exported using HST drizzle algorithm by passing the argument <b>-drizzle</b> which can take the additional options:\n<b>-pixfrac=</b> sets the pixel fraction (default = 1.0).\nThe <b>-kernel=</b> argument sets the drizzle kernel and must be followed by one of <b>point</b>, <b>turbo</b>, <b>square</b>, <b>gaussian</b>, <b>lanczos2</b> or <b>lanczos3</b>. The default is <b>square</b>.\nThe <b>-flat=</b> argument specifies a master flat to weight the drizzled input pixels (default is no flat).\n\nNote: when using <b>-drizzle</b> on images taken with a color camera, the input images must not be debayered. In that case, star detection will always occur on the green pixels")
-#define STR_RELOADSCRIPTS N_("Rescans the scripts folders and updates the Scripts menu")
+#define STR_RELOADSCRIPTS N_("Rescans the scripts folders and updates the Scripts menu. Note that this command may not be used headless (i.e. from siril-cli) and also that the update will happen asynchronously (i.e. the command will trigger the update but will not wait for the update to complete)")
 #define STR_REQUIRES N_("Returns an error if the version of Siril is older than the minimum required version passed in the first argument. Optionally, takes a second argument for the Siril version at which the script is obsolete: returns an error if the version of Siril is <b>newer than or equal to</b> the one passed in the second argument.\n\nExample: <i>requires 1.2.0 1.4.0</i> allows the script to run for all of the 1.2.x series and 1.3.x series, but will not run for any versions earlier than 1.2.0 or for version 1.4.0 or any later versions")
 #define STR_RESAMPLE N_("Resamples the loaded image, either with a factor <b>factor</b> or for the target width or height provided by either of <b>-width=</b>, <b>-height=</b> or <b>-maxdim=</b>. This is generally used to resize images: a factor of 0.5 divides size by 2. The <b>-maxdim</b> argument can be used to resize the longest dimension of the image to a set size, which can be useful for optimizing images for certain websites, e.g. social media websites.\nIn the graphical user interface, we can see that several interpolation algorithms are proposed.\n\nThe pixel interpolation method can be specified with the <b>-interp=</b> argument followed by one of the methods in the list <b>no</b>[ne], <b>ne</b>[arest], <b>cu</b>[bic], <b>la</b>[nczos4], <b>li</b>[near], <b>ar</b>[ea]}.\nClamping of the bicubic and lanczos4 interpolation methods is the default, to avoid artefacts, but can be disabled with the <b>-noclamp</b> argument")
 #define STR_RGBCOMP N_("Creates an RGB composition using three independent images, or an LRGB composition using the optional luminance image and three monochrome images or a color image. Result image is called composed_rgb.fit or composed_lrgb.fit unless another name is provided in the optional argument. Another optional argument, <b>-nosum</b> tells Siril not to sum exposure times. This impacts FITS keywords such as LIVETIME and STACKCNT")
